--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,20 +4,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- TODO: Set the document title to the name of your application -->
-  <title>vibecode.dev App</title>
-  <meta name="description" content="vibecode.dev Generated Project" />
-  <meta name="author" content="vibecode.dev" />
-
-  <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="vibecode.dev App" />
-  <meta property="og:description" content="vibecode.dev Generated Project" />
+  
+  <title>PN8 - AI Cinematography Prompt Builder</title>
+  <meta name="description" content="Create stunning AI-generated images with professional cinematography. Build detailed prompts with camera settings, lenses, lighting, and scene composition." />
+  <meta name="author" content="PN8" />
+  <meta name="keywords" content="AI image generation, cinematography, prompt builder, camera settings, photography, AI art, midjourney prompts, stable diffusion" />
+  
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/og-base.png" />
+  <meta property="og:url" content="https://pn8.ai/" />
+  <meta property="og:title" content="PN8 - AI Cinematography Prompt Builder" />
+  <meta property="og:description" content="Create stunning AI-generated images with professional cinematography. Build detailed prompts with camera settings, lenses, lighting, and scene composition." />
+  <meta property="og:image" content="https://pn8.ai/og-base.png" />
+  <meta property="og:site_name" content="PN8" />
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@vibecodeapp" />
-  <meta name="twitter:image" content="/og-base.png" />
+  <meta name="twitter:url" content="https://pn8.ai/" />
+  <meta name="twitter:title" content="PN8 - AI Cinematography Prompt Builder" />
+  <meta name="twitter:description" content="Create stunning AI-generated images with professional cinematography. Build detailed prompts with camera settings, lenses, lighting, and scene composition." />
+  <meta name="twitter:image" content="https://pn8.ai/og-base.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  
+  <!-- Theme color for mobile browsers -->
+  <meta name="theme-color" content="#000000" />
 </head>
 
 <body>
